dataset1235/2025-2/805158916/users/2311811032/executions/2651470117_1078076002.log
== RUN (2025-08-26 14:03:06)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = 1.23
# x2 = 0
# print(X2)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a variavel nao foi definida previamente
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23
x2 = 0

# 5.2 saida

print(x2)

# falta a m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:10:16)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = "Ufam"
# print(x1

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "SyntaxError"

# 4 por que

# faltou fechar o parenteses da funcao ao imprimir a variavel
      
# 5 correcao e execusao

# 5.1 entrada

x1 = "Ufam"

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:54:17)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:28:43)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x 1 = 1.23

# 2 entrada

# float(input("1.23"))

# 3 aconteceu um erro

# sim

# 4 qual o tipo do erro

# "SyntaxError"

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1'))

# 6.2 saida

print(x1)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
x11.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
x11.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 14:04:19)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = 1.23
# x2 = 0
# print(X2)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a variavel nao foi definida previamente
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23
x2 = 0

# 5.2 saida

print(x2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:27:03)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x 1 = 1.23

# 2 entrada

# float(input("1.23"))

# 3 aconteceu um erro

# sim

# 4 qual o tipo do erro

# "SyntaxError"

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1 = 1.23'))

# 6.2 saida



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
x1 = 1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
x1 = 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:52:00)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = "Ufam
# print(x1)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "Syntax Error"

# 4 por que

# faltou fechar as aspas na string da variavel

# 5 correcao e execusao

# 5.1 entrada

x1 = "Ufam"

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:28:41)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x 1 = 1.23

# 2 entrada

# float(input("1.23"))

# 3 aconteceu um erro

# sim

# 4 qual o tipo do erro

# "SyntaxError"

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1'))

# 6.2 saida

print(x1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
x11.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
x11.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:48:30)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = "Ufam
# print(x1)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "Syntax Error"

# 4 por que

# faltou fechar as aspas na string da variavel

# 5 correcao e execusao

# 5.1 entrada

x1 = "Ufam"

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:59:51)
-- CODE: 
# errar e humano parte 1

# 1 comando

x1 = "Ufam"
print(x1

# 2 aconteceu um erro

# 

# 3 qual o tipo do erro

# 

# 4 por que

# 
      
# 5 correcao e execusao

# 5.1 entrada



# 5.2 saida


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 6
    print(x1
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 6
    print(x1
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:35:31)
-- CODE: 
# errar e humano parte 1

# 1 comando

x1 = "Ufam
print(x1)

# 2 entrada



# 3 aconteceu um erro

# s

# 4 qual o tipo do erro

# 

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1'))

# 6.2 saida

print(x1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:28:20)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x 1 = 1.23

# 2 entrada

# float(input("1.23"))

# 3 aconteceu um erro

# sim

# 4 qual o tipo do erro

# "SyntaxError"

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1'))

# 6.2 saida

print('x1')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
x1x1
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
x1x1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:03:11)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = 1.23
# x2 = 0
# print(X2)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a variavel nao foi definida previamente
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23
x2 = 0

# 5.2 saida

print(x2)

# falta a m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:24:13)
-- CODE: 
# errar e humano parte 1

# 1 programa

# x1 = 1.23
# printt(x1)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a funcao nao existe
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:34:20)
-- CODE: 
# errar e humano parte 1

# 1 comando

x1 = "Ufam
print(x1)

# 2 entrada



# 3 aconteceu um erro

# 

# 4 qual o tipo do erro

# 

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1'))

# 6.2 saida

print(x1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 5)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:04:17)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = 1.23
# x2 = 0
# print(X2)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a variavel nao foi definida previamente
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23
x2 = 0

# 5.2 saida

print(x2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:11:40)
-- CODE: 
# errar e humano parte 1

# 1 comando

x 1 = 1.23

# entrada

float(input("1.23"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 14:24:15)
-- CODE: 
# errar e humano parte 1

# 1 programa

# x1 = 1.23
# printt(x1)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a funcao nao existe
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:28:25)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x 1 = 1.23

# 2 entrada

# float(input("1.23"))

# 3 aconteceu um erro

# sim

# 4 qual o tipo do erro

# "SyntaxError"

# 5 por que

# ha espaco na variavel, no caso entre o x e 1

# 6 correcao e execusao

x1 = 1.23

# 6.1 entrada

float(input('x1'))

# 6.2 saida

print('x1')

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
x1x1
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
x1x1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:10:13)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = "Ufam"
# print(x1

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "SyntaxError"

# 4 por que

# faltou fechar o parenteses da funcao ao imprimir a variavel
      
# 5 correcao e execusao

# 5.1 entrada

x1 = "Ufam"

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 14:03:08)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = 1.23
# x2 = 0
# print(X2)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "NameError"

# 4 por que

# a variavel nao foi definida previamente
      
# 5 correcao e execusao

# 5.1 entrada

x1 = 1.23
x2 = 0

# 5.2 saida

print(x2)

# falta a m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:08:12)
-- CODE: 
# errar e humano parte 1

# 1 programa

x1 = 1.23
printt(x1)

# 2 aconteceu um erro



# 3 qual o tipo do erro



# 4 por que


      
# 5 correcao e execusao

# 5.1 entrada




# 5.2 saida


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    printt(x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    printt(x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:48:32)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = "Ufam
# print(x1)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "Syntax Error"

# 4 por que

# faltou fechar as aspas na string da variavel

# 5 correcao e execusao

# 5.1 entrada

x1 = "Ufam"

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:48:41)
-- CODE: 
# errar e humano parte 1

# 1 comando

# x1 = "Ufam
# print(x1)

# 2 aconteceu um erro

# sim

# 3 qual o tipo do erro

# "Syntax Error"

# 4 por que

# faltou fechar as aspas na string da variavel

# 5 correcao e execusao

# 5.1 entrada

x1 = "Ufam"

# 5.2 saida

print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
